@@ -272,4 +272,4 @@ ASSUME THE COST OF ALL NECESSARY SERVICING, REPAIR OR CORRECTION.
 
 GPLv2.  See LICENSE for a copy.
 
-  [documentation]: http://rubydoc.info/github/benjaminoakes/maid/master/frames
+  [documentation]: http://www.rubydoc.info/github/benjaminoakes/maid/master/Maid/Tools
