@@ -4,11 +4,13 @@
 # which can't depend on other gems.  FIXME: That's no longer accurate, so this could be `Platform.user_agent` instead.
 module Maid::UserAgent
   class << self
+    def short
+      "Maid/#{ ::Maid.const_get(:VERSION) }"
+    end
+
     # This used to be called `#to_s`, but that made things difficult when testing.
     def value
-      maid = "Maid/#{ ::Maid.const_get(:VERSION) }"
-      
-      "#{ maid } (#{ RUBY_DESCRIPTION })"
+      "#{ short } (#{ RUBY_DESCRIPTION })"
     end
   end
 end
