@@ -1,3 +1,4 @@
 module Maid
   VERSION = '0.6.0.alpha.6'
+  SUMMARY = 'Be lazy. Let Maid clean up after you, based on rules you define. Think of it as "Hazel for hackers".'
 end
