@@ -10,6 +10,7 @@ maid (0.6.0) unstable; urgency=low
   * Jurriaan Pruis: Add daemon mode and repeat support (Closes: #126, #131)
   * Jurriaan Pruis: Add "ignore" option support for "watch" (Closes: #132)
   * Nico Ritschel: Add "copy" tool (Closes: #72, #133)
+  * Add maid introduction and links (Closes: #128)
 
  -- Benjamin Oakes <hello@benjaminoakes.com>  TODO
 
